--- a/Instagram2.0/Base.lproj/Main.storyboard
+++ b/Instagram2.0/Base.lproj/Main.storyboard
@@ -591,6 +591,14 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pNT-bM-KRo">
+                                <rect key="frame" x="0.0" y="270" width="163" height="49"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <items>
+                                    <tabBarItem systemItem="favorites" id="3FX-cU-NN5"/>
+                                    <tabBarItem systemItem="more" id="baz-rj-xST"/>
+                                </items>
+                            </tabBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -682,7 +690,6 @@
         <image name="gridbutton" width="60" height="60"/>
         <image name="homebutton" width="127" height="90"/>
         <image name="librabybutton" width="307" height="248"/>
-
         <image name="likebutton" width="151" height="63"/>
         <image name="likesbutton" width="128" height="90"/>
         <image name="profilebutton" width="128" height="90"/>
