--- a/Instagram2.0/Base.lproj/Main.storyboard
+++ b/Instagram2.0/Base.lproj/Main.storyboard
@@ -85,7 +85,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eYH-Lz-KHm">
-                                <rect key="frame" x="149" y="148" width="162" height="34"/>
+                                <rect key="frame" x="131" y="148" width="180" height="34"/>
                                 <state key="normal" backgroundImage="edityourprofilebutton">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -139,7 +139,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vGQ-GC-oi5">
-                                <rect key="frame" x="257" y="28" width="37" height="30"/>
+                                <rect key="frame" x="267" y="51" width="37" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <state key="normal" title="Done">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -161,6 +161,18 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZII-GX-QY8">
                                 <rect key="frame" x="16" y="66" width="112" height="91"/>
                             </imageView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="paD-UP-3x5">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="53"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MTc-4X-xLQ">
+                                        <rect key="frame" x="280" y="21" width="36" height="30"/>
+                                        <state key="normal" image="settingsbutton">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.043137256056070328" green="0.63137257099151611" blue="0.96862751245498657" alpha="1" colorSpace="deviceRGB"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -203,18 +215,8 @@
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="320" id="dZp-5T-EPs"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="number likes" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DAu-jj-YUU">
-                                <rect key="frame" x="16" y="394" width="98" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="LEV-hG-cnx"/>
-                                    <constraint firstAttribute="width" constant="98" id="kvV-fX-aqy"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="comment/description" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SeT-kP-s4P">
-                                <rect key="frame" x="12" y="429" width="164" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="comment/description" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SeT-kP-s4P">
+                                <rect key="frame" x="33" y="429" width="164" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="WXL-SQ-9ib"/>
                                     <constraint firstAttribute="width" constant="164" id="qM9-kz-yL1"/>
@@ -303,6 +305,22 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="number likes" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DAu-jj-YUU">
+                                <rect key="frame" x="38" y="400" width="98" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="LEV-hG-cnx"/>
+                                    <constraint firstAttribute="width" constant="98" id="kvV-fX-aqy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="numberoflikesicon" translatesAutoresizingMaskIntoConstraints="NO" id="gbo-24-3E8">
+                                <rect key="frame" x="4" y="400" width="26" height="24"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="commenticon" translatesAutoresizingMaskIntoConstraints="NO" id="Rzz-0L-zXK">
+                                <rect key="frame" x="4" y="424" width="28" height="26"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -684,6 +702,7 @@
     <resources>
         <image name="camerabutton" width="190" height="203"/>
         <image name="commentbutton" width="207" height="59"/>
+        <image name="commenticon" width="34" height="30"/>
         <image name="delete3dotsbutton" width="86" height="67"/>
         <image name="edityourprofilebutton" width="331" height="52"/>
         <image name="flashbutton" width="67" height="74"/>
@@ -692,9 +711,11 @@
         <image name="librabybutton" width="307" height="248"/>
         <image name="likebutton" width="151" height="63"/>
         <image name="likesbutton" width="128" height="90"/>
+        <image name="numberoflikesicon" width="30" height="28"/>
         <image name="profilebutton" width="128" height="90"/>
         <image name="rotatecamerabutton" width="78" height="77"/>
         <image name="searchbutton" width="129" height="90"/>
+        <image name="settingsbutton" width="67" height="55"/>
         <image name="videobutton" width="109" height="106"/>
         <image name="xbutton" width="73" height="47"/>
     </resources>
